--- a/css/index.css
+++ b/css/index.css
@@ -181,11 +181,13 @@ p {
 
 footer {
     width: 100%;
+    height: 50px;
     background: black;
 }
 
 footer nav {
     width: 60%;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -219,4 +221,10 @@ button {
     border-radius: 10px;
     margin: 10px;
     margin-left: 0;
+}
+h1 {
+    padding-top: 15px;
+}
+.last-paragraph {
+    margin-bottom: 30px;
 }
